# ignisprompt

./: .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  SECURITY.md
.github/workflows/: ci.yml
config/models/: legal-qwen2_5-0_5b-instruct-q4.json  legal-saul-placeholder.json
config/prompts/: legal-contract-review-compact-v0.1.md  legal-contract-review-v0.1.md
crates/ignispromptd/: Cargo.toml
crates/ignispromptd/src/: legal_json.rs  main.rs  model_runner.rs
data/audit/: events.jsonl
docs/: ARCHITECTURE.md  ATTESTATION_REPORT_TEMPLATE.md  CODEX_TASKS.md  COMPLIANCE_NOTES.md  CONTRIBUTING_DEV.md  DEMO.md  ENTERPRISE.md  MODELS.md  README.md  RELEASE_CHECKLIST.md  ROADMAP.md  SECURITY_MODEL.md  TESTING.md  THREAT_MODEL.md
docs/codex/: IMPLEMENT_IGNISPROMPTD.md
scripts/: demo-local-legal-review.sh  dev-check.sh  ollama-gguf-runner.sh  run-alpha-legal-bakeoff-v0.1.sh  run-golden-legal-v0.3.sh  smoke-gguf-local.sh  smoke.sh  start-dev.sh
tests/golden-legal/: adversarial-contract-instruction.json  adversarial-legal-language-injection-request.json  explanation-quality-request.json  general-request.json  no-cloud-without-consent-request.json  smoke-legal-request.json  unavailable-model-request.json
